Default margin fixed + navbar is visible

--- a/actdition-visible/src/components/functionalities/navbar/Navbar.module.css
+++ b/actdition-visible/src/components/functionalities/navbar/Navbar.module.css
@@ -1,23 +1,17 @@
 .navbar
 {
-  position: fixed;
   width: 100%;
-  /*background-color: #ffffff;*/
-  color: #000000;/*#333*/
+  height: 3rem;
+  color: #000000;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
   padding: 0 1rem;
-  background: rgba(255, 255, 255, 0.1);
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-  backdrop-filter: blur(7px);
-  -webkit-backdrop-filter: blur(10.5px);
-  -webkit-transition: background-color 750ms;
-  transition: background-color 750ms;
+  background: rgba(255, 255, 255);
   z-index: 6;
 }
-
+/*
 .navbar:hover
 {
   background-color: #000000;
@@ -26,7 +20,7 @@
   transition: background-color 750ms linear;
   color:#ffffff;
 }
-
+*/
 .navigationlinks
 {
   padding: 0;
